--- a/web/src/layout/layout.module.css
+++ b/web/src/layout/layout.module.css
@@ -7,6 +7,8 @@
 
 .content {
   background-color: #fafafe;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 /* sidebar */
@@ -21,8 +23,10 @@
 .box {
   padding-top: 52.5px;
   padding-bottom: 35px;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  /* overflow-y: hidden; */
+  overflow: none;
 }
 
 .menus {
@@ -72,4 +76,9 @@
   color: #fff;
   font-size: 12px;
   font-weight: 500;
+}
+
+/* aside */
+.aside {
+  overflow: none;
 }
