feat(web): nested layout + remove state/store usage, url first

--- a/web/src/components/shopping-list/shopping-list.module.css
+++ b/web/src/components/shopping-list/shopping-list.module.css
@@ -1,9 +1,9 @@
 .box {
+  height: 100%;
   overflow-y: scroll;
   background: #fff0de;
   padding: 45px;
   padding-bottom: 150px;
-  height: 100vh;
 }
 
 .header {
