shopping history UI + cancel list modal

--- a/web/src/layout/layout.module.css
+++ b/web/src/layout/layout.module.css
@@ -18,6 +18,7 @@
   background-color: #fafafe;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  padding: 37.5px 80.5px;
 }
 /* content container end */
 
