--- a/web/src/components/add-item/add-item.module.css
+++ b/web/src/components/add-item/add-item.module.css
@@ -37,7 +37,7 @@
   padding-inline-start: 16px;
   padding-inline-end: 16px;
 
-  color: #bdbdbd;
+  color: var(--text-primary);
   font-size: 0.875rem;
   font-weight: 500;
 
@@ -60,6 +60,7 @@
 .categories {
   width: 100%;
   max-height: 200px;
+  overflow-y: scroll;
   border-radius: 12px;
   border: 1px solid #e0e0e0;
   background: #fff;
